namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: iot-demo
  labels:
    name: iot-demo
