consumer-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: consumer-app
  labels:
    app: iot-demo
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: iot-demo
        name: consumer-app
    spec:
      containers:
        - name: consumer-app
          image: strimzilab/consumer-app:latest
