device-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: device-app
  labels:
    app: iot-demo
spec:
  replicas: 10
  template:
    metadata:
      labels:
        app: iot-demo
        name: device-app
    spec:
      containers:
        - name: device-app
          image: strimzilab/device-app:latest
