consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-demo
    name: consumer-app
  name: consumer-app
spec:
  ports:
  - name: https
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: consumer-app
