consumer-app-route-eu.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-demo
    name: consumer-app-eu
  name: consumer-app-eu
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
spec:
  host: consumer-app-myproject.apps.ly-demo-eu.openshiftaws.com
  port:
    targetPort: http
  to:
    kind: Service
    name: consumer-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
