consumer-app-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-demo
    name: consumer-app
  name: consumer-app
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
spec:
  host: consumer-app-myproject.apps.ly-demo.openshiftaws.com
  port:
    targetPort: https
  subdomain: ""
  tls:
    termination: edge
  to:
    kind: Service
    name: consumer-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
